--- a/.env
+++ b/.env
@@ -1,3 +1,24 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
-BASE_THEME=dark
+SITE_NAME_HEADER=Digital Garden
+SITE_MAIN_LANGUAGE=en
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT=yyyy-MMM-dd h:mm a
+SHOW_UPDATED_TIMESTAMP=true
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_BACK_LINKS=true
+STYLE_SETTINGS_CSS=
+STYLE_SETTINGS_BODY_CLASSES=
+USE_FULL_RESOLUTION_IMAGES=false
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=false
+dgShowTags=false
